--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
                                 <img src="https://raw.githubusercontent.com/likbez2014/hata_plus/master/img/logo.png" alt="logo">
                             </a>
                         </td>
-                        <td>
-                            <a href="">
-                                <img src="" alt="">
-                                    <p></p>
-                                </img>
-                            </a>
+                        <td style="text-align:right;">
+                            <p>
+                                <a href="tel:+380971002525">
+                                    <img src="https://raw.githubusercontent.com/likbez2014/hata_newsletter/master/img/phone.png" alt="phone">+38(097) 100-25-25 
+                                </a>
+                            </p>
+                            <p>контактний телефон у Вашому місті</p>
                         </td>
                     </tr>
                 </table>
