--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
             <td  class="header">
                 <table border="0" cellpadding="0" cellspacing="0" align="center" width="100%">
                     <tr>
-                        <td>
+                        <td class="logo">
                             <a href="#">
                                 <img src="https://raw.githubusercontent.com/likbez2014/hata_plus/master/img/logo.png" alt="logo">
                             </a>
                         </td>
-                        <td style="text-align:right;">
+                        <td class="phone" style="text-align:right;">
                             <p>
                                 <a href="tel:+380971002525">
-                                    <img src="https://raw.githubusercontent.com/likbez2014/hata_newsletter/master/img/phone.png" alt="phone">+38(097) 100-25-25 
+                                    <img src="https://raw.githubusercontent.com/likbez2014/hata_newsletter/master/img/phone.png" alt="phone"> +38(097) 100-25-25 
                                 </a>
                             </p>
-                            <p>контактний телефон у Вашому місті</p>
+                            <p class="contact">контактний телефон у Вашому місті</p>
                         </td>
                     </tr>
                 </table>
@@ -39,8 +39,18 @@
             <td>
                 <table>
                     <tr>
-                        <td></td>
-                        <td></td>
+                        <td>
+                            <a href="https://likbez2014.github.io/hata_plus/price.html">
+                                <img src="https://raw.githubusercontent.com/likbez2014/hata_newsletter/master/img/Group.png" alt="">
+                            </a>
+                            <h1>Компанія “Хата Плюс”</h1>
+                            <p>Напевно кожен з нас не раз думав про те, щоб купити будинок котедж 
+                                і насолоджуватися життям в гармонії з природою. Дійсно, для багатьох жителів мегаполісу заміська нерухомість під містом стала справжньою віддушиною 
+                                і порятунком від сумній життя в багатоповерхівках спальних районів. </p>
+                            <a href="">
+                                <img src="" alt="">
+                            </a>
+                        </td>
                     </tr>
                 </table>
             </td>
