--- a/index.html
+++ b/index.html
@@ -13,18 +13,20 @@
     <table border="0" cellpadding="0" cellspacing="0" align="center" width="100%">
         <tr>
             <td bgcolor="#dcdce5"></td>
-            <td  class="header">
+            <td class="header">
                 <table border="0" cellpadding="0" cellspacing="0" align="center" width="100%">
                     <tr>
                         <td class="logo">
                             <a href="#">
-                                <img src="https://raw.githubusercontent.com/likbez2014/hata_plus/master/img/logo.png" alt="logo">
+                                <img src="https://raw.githubusercontent.com/likbez2014/hata_plus/master/img/logo.png"
+                                    alt="logo">
                             </a>
                         </td>
                         <td class="phone" style="text-align:right;">
                             <p>
                                 <a href="tel:+380971002525">
-                                    <img src="https://raw.githubusercontent.com/likbez2014/hata_newsletter/master/img/phone.png" alt="phone"> +38(097) 100-25-25 
+                                    <img src="https://raw.githubusercontent.com/likbez2014/hata_newsletter/master/img/phone.png"
+                                        alt="phone"> +38(097) 100-25-25
                                 </a>
                             </p>
                             <p class="contact">контактний телефон у Вашому місті</p>
@@ -40,16 +42,33 @@
                 <table>
                     <tr>
                         <td>
-                            <a href="https://likbez2014.github.io/hata_plus/price.html">
-                                <img src="https://raw.githubusercontent.com/likbez2014/hata_newsletter/master/img/Group.png" alt="">
-                            </a>
+                            <div class="main-img">
+                                <a href="https://likbez2014.github.io/hata_plus/price.html">
+                                    <img src="https://raw.githubusercontent.com/likbez2014/hata_newsletter/master/img/Group.png"
+                                        alt="picture">
+                                </a>
+                            </div>
                             <h1>Компанія “Хата Плюс”</h1>
-                            <p>Напевно кожен з нас не раз думав про те, щоб купити будинок котедж 
-                                і насолоджуватися життям в гармонії з природою. Дійсно, для багатьох жителів мегаполісу заміська нерухомість під містом стала справжньою віддушиною 
+                            <p class="main-text">Напевно кожен з нас не раз думав про те, щоб купити будинок котедж
+                                і насолоджуватися життям в гармонії з природою. Дійсно, для багатьох жителів мегаполісу
+                                заміська нерухомість під містом стала справжньою віддушиною
                                 і порятунком від сумній життя в багатоповерхівках спальних районів. </p>
-                            <a href="">
-                                <img src="" alt="">
-                            </a>
+                            <table class="button" border="0" cellpadding="0" cellspacing="0" align="center" width="50%">
+                                <tr>
+                                    <td bgcolor="#fd8300">
+                                        <a href="https://likbez2014.github.io/hata_plus">
+                                            <h4>Детальніше про нас</h4>
+                                        </a>
+                                    </td>
+                                </tr>
+                            </table>
+                            <table class="grey" border="0" cellpadding="0" cellspacing="0" align="center" width="100%">
+                                <tr>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                            </table>
                         </td>
                     </tr>
                 </table>
