second-tree commit

--- a/index.html
+++ b/index.html
@@ -64,9 +64,21 @@
                             </table>
                             <table class="grey" border="0" cellpadding="0" cellspacing="0" align="center" width="100%">
                                 <tr>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
+                                    <td>
+                                        <img src="" alt="star">
+                                        <h5>Зручне розташування</h5>
+                                        <p>Наші котеджі знаходяться по всій країні</p>
+                                    </td>
+                                    <td>
+                                        <img src="" alt="house">
+                                        <h5>Широкий вибір</h5>
+                                        <p>Понад 50 видів котеджів з усіма зручностями</p>
+                                    </td>
+                                    <td>
+                                        <img src="" alt="tree">
+                                        <h5>Дика природа</h5>
+                                        <p>Скалиста місцевіть, свіже повітря, та риболовля</p>
+                                    </td>
                                 </tr>
                             </table>
                         </td>
