--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 
 <body>
-    <table border="0" cellpadding="0" cellspacing="0" align="center" width="100%">
+    <table border="0" cellpadding="0" cellspacing="0" align="center" width="100%" style="border-collapse:collapse;">
         <tr>
             <td bgcolor="#dcdce5"></td>
             <td class="header">
-                <table border="0" cellpadding="0" cellspacing="0" align="center" width="100%">
+                <table border="0" cellpadding="0" cellspacing="0" align="center" width="100%" style="border-collapse:collapse;">
                     <tr>
                         <td class="logo">
                             <a href="#">
@@ -39,7 +39,7 @@
         <tr>
             <td bgcolor="#f5f5f5"></td>
             <td>
-                <table>
+                <table border="0" cellpadding="0" cellspacing="0" align="center" width="100%" style="border-collapse:collapse;">
                     <tr>
                         <td>
                             <div class="main-img">
@@ -65,20 +65,34 @@
                             <table class="grey" border="0" cellpadding="0" cellspacing="0" align="center" width="100%">
                                 <tr>
                                     <td>
-                                        <img src="" alt="star">
+                                        <img src="https://raw.githubusercontent.com/likbez2014/hata_newsletter/master/img/star.png" alt="star">
                                         <h5>Зручне розташування</h5>
                                         <p>Наші котеджі знаходяться по всій країні</p>
                                     </td>
                                     <td>
-                                        <img src="" alt="house">
+                                        <img src="https://raw.githubusercontent.com/likbez2014/hata_newsletter/master/img/house.png" alt="house">
                                         <h5>Широкий вибір</h5>
                                         <p>Понад 50 видів котеджів з усіма зручностями</p>
                                     </td>
                                     <td>
-                                        <img src="" alt="tree">
+                                        <img src="https://raw.githubusercontent.com/likbez2014/hata_newsletter/master/img/tree.png" alt="tree">
                                         <h5>Дика природа</h5>
                                         <p>Скалиста місцевіть, свіже повітря, та риболовля</p>
                                     </td>
+                                </tr>
+                            </table>
+                            <table class="price" border="0" cellpadding="0" cellspacing="0" align="center" width="100%" style="border-collapse:collapse;">
+                                <tr>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td></td>
+                                    <td></td>
                                 </tr>
                             </table>
                         </td>
