--- a/index.html
+++ b/index.html
@@ -83,16 +83,28 @@
                             </table>
                             <table class="price" border="0" cellpadding="0" cellspacing="0" align="center" width="100%" style="border-collapse:collapse;">
                                 <tr>
-                                    <td></td>
-                                    <td></td>
+                                    <td>
+                                        <img src="" alt="">
+                                    </td>
+                                    <td>
+
+                                    </td>
                                 </tr>
                                 <tr>
-                                    <td></td>
-                                    <td></td>
+                                    <td>
+
+                                    </td>
+                                    <td>
+                                       <img src="" alt=""> 
+                                    </td>
                                 </tr>
                                 <tr>
-                                    <td></td>
-                                    <td></td>
+                                    <td>
+                                       <img src="" alt=""> 
+                                    </td>
+                                    <td>
+
+                                    </td>
                                 </tr>
                             </table>
                         </td>
