--- a/index.html
+++ b/index.html
@@ -83,26 +83,41 @@
                             </table>
                             <table class="price" border="0" cellpadding="0" cellspacing="0" align="center" width="100%" style="border-collapse:collapse;">
                                 <tr>
-                                    <td>
-                                        <img src="" alt="">
+                                    <td class="view-house">
+                                        <a href="">
+                                            <img src="https://raw.githubusercontent.com/likbez2014/hata_newsletter/master/img/house_1.jpg" alt="house-monreal">
+                                        </a>
                                     </td>
-                                    <td>
-
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-
-                                    </td>
-                                    <td>
-                                       <img src="" alt=""> 
+                                    <td class="name-house">
+                                        <h3><a href="">MONTREAL (332 м<sup>2</sup>)</a></h3>
+                                        <p style="padding-bottom: 10px;">Містечко оточене сосновим і листяним лісом, чи не на кожній дільниці сосна,<br> береза або клен.</p>
+                                        <p>Загальна площа будови: 290 м<sup>2</sup>
+                                        <p>Кількість спалень: 3</p>
+                                        <p>Гараж: 2 авто</p>
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td>
-                                       <img src="" alt=""> 
+                                    <td class="name-house" style="padding-left: 30px;">
+                                        <h3><a href="">EDMONTON (338 м<sup>2</sup>)</a></h3>
+                                        <p style="padding-bottom: 10px;">Тут є все для комфортної життя: вода з власної скважини, газова опалення, високошвидкісна Інтернет.</p>
+                                        <p>Загальна площа будови: 312  м<sup>2</sup>
+                                        <p>Кількість спалень: 4</p>
+                                        <p>Гараж: 2 авто</p>
                                     </td>
-                                    <td>
+                                    <td class="view-house" style="padding-left:0;">
+                                       <img src="https://raw.githubusercontent.com/likbez2014/hata_newsletter/master/img/house_2.jpg" alt="house-edmonton"> 
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="view-house">
+                                       <img src="https://raw.githubusercontent.com/likbez2014/hata_newsletter/master/img/house_3.jpg" alt="house-calgary"> 
+                                    </td>
+                                    <td class="name-house">
+                                        <h3><a href="">CALGARY (294 м<sup>2</sup>)</a></h3>
+                                        <p style="padding-bottom: 10px;">Для діток тут побудована ігровий та спортивний майданчик, а недалеко від містечка знаходяться дитячий садок.</p>
+                                        <p>Загальна площа будови: 294 м<sup>2</sup>
+                                        <p>Кількість спалень: 3</p>
+                                        <p>Гараж: 2 авто</p>
 
                                     </td>
                                 </tr>
