--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
                                         <p>Гараж: 2 авто</p>
                                     </td>
                                 </tr>
-                                <tr>
-                                    <td class="name-house" style="padding-left: 30px;">
+                                <tr style="border-top: 1px solid #e3e3eb; border-bottom: 1px solid #e3e3eb;">
+                                    <td class="name-house" style="padding-left: 30px; padding-top: 10;">
                                         <h3><a href="">EDMONTON (338 м<sup>2</sup>)</a></h3>
                                         <p style="padding-bottom: 10px;">Тут є все для комфортної життя: вода з власної скважини, газова опалення, високошвидкісна Інтернет.</p>
                                         <p>Загальна площа будови: 312  м<sup>2</sup>
@@ -121,6 +121,18 @@
 
                                     </td>
                                 </tr>
+                                <table border="0" cellpadding="0" cellspacing="0" align="center" width="100%" style="border-collapse:collapse;>
+                                    <tr>
+                                        <td>
+                                           <h6>Отримай знижку -10%</h6>
+                                           <p>Відправ цього листа 10 друзям та отримай знижку на усі котеджі.
+                                            Акція триває в період з 21.04.2018 по 31.10.2018 включно.</p>
+                                           <a href="">
+                                               <img src="" alt="">
+                                            </a>
+                                        </td>
+                                    </tr>
+                                </table>
                             </table>
                         </td>
                     </tr>
