--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
 
                                     </td>
                                 </tr>
-                                <table border="0" cellpadding="0" cellspacing="0" align="center" width="100%" style="border-collapse:collapse;>
+                                <table border="0" cellpadding="0" cellspacing="0" align="center" width="100%" 
+                                style="border-collapse:collapse; background-image: url(https://raw.githubusercontent.com/likbez2014/hata_newsletter/master/img/container.jpg);">
                                     <tr>
                                         <td>
                                            <h6>Отримай знижку -10%</h6>
