--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <tr>
             <td bgcolor="#dcdce5"></td>
             <td class="header">
-                <table border="0" cellpadding="0" cellspacing="0" align="center" width="100%" style="border-collapse:collapse;">
+                <table border="0" cellpadding="0" cellspacing="0" align="center" width="100%"
+                    style="border-collapse:collapse;">
                     <tr>
                         <td class="logo">
                             <a href="#">
@@ -39,7 +40,8 @@
         <tr>
             <td bgcolor="#f5f5f5"></td>
             <td>
-                <table border="0" cellpadding="0" cellspacing="0" align="center" width="100%" style="border-collapse:collapse;">
+                <table border="0" cellpadding="0" cellspacing="0" align="center" width="100%"
+                    style="border-collapse:collapse;">
                     <tr>
                         <td>
                             <div class="main-img">
@@ -65,75 +67,93 @@
                             <table class="grey" border="0" cellpadding="0" cellspacing="0" align="center" width="100%">
                                 <tr>
                                     <td>
-                                        <img src="https://raw.githubusercontent.com/likbez2014/hata_newsletter/master/img/star.png" alt="star">
+                                        <img src="https://raw.githubusercontent.com/likbez2014/hata_newsletter/master/img/star.png"
+                                            alt="star">
                                         <h5>Зручне розташування</h5>
                                         <p>Наші котеджі знаходяться по всій країні</p>
                                     </td>
                                     <td>
-                                        <img src="https://raw.githubusercontent.com/likbez2014/hata_newsletter/master/img/house.png" alt="house">
+                                        <img src="https://raw.githubusercontent.com/likbez2014/hata_newsletter/master/img/house.png"
+                                            alt="house">
                                         <h5>Широкий вибір</h5>
                                         <p>Понад 50 видів котеджів з усіма зручностями</p>
                                     </td>
                                     <td>
-                                        <img src="https://raw.githubusercontent.com/likbez2014/hata_newsletter/master/img/tree.png" alt="tree">
+                                        <img src="https://raw.githubusercontent.com/likbez2014/hata_newsletter/master/img/tree.png"
+                                            alt="tree">
                                         <h5>Дика природа</h5>
                                         <p>Скалиста місцевіть, свіже повітря, та риболовля</p>
                                     </td>
                                 </tr>
                             </table>
-                            <table class="price" border="0" cellpadding="0" cellspacing="0" align="center" width="100%" style="border-collapse:collapse;">
+                            <table class="price" border="0" cellpadding="0" cellspacing="0" align="center" width="100%"
+                                style="border-collapse:collapse;">
                                 <tr>
                                     <td class="view-house">
                                         <a href="">
-                                            <img src="https://raw.githubusercontent.com/likbez2014/hata_newsletter/master/img/house_1.jpg" alt="house-monreal">
+                                            <img src="https://raw.githubusercontent.com/likbez2014/hata_newsletter/master/img/house_1.jpg"
+                                                alt="house-monreal">
                                         </a>
                                     </td>
                                     <td class="name-house">
-                                        <h3><a href="">MONTREAL (332 м<sup>2</sup>)</a></h3>
-                                        <p style="padding-bottom: 10px;">Містечко оточене сосновим і листяним лісом, чи не на кожній дільниці сосна,<br> береза або клен.</p>
+                                        <a href="https://likbez2014.github.io/hata_plus">
+                                            <h3>MONTREAL (332 м<sup>2</sup>)</h3>
+                                        </a>
+                                        <p style="padding-bottom: 10px;">Містечко оточене сосновим і листяним лісом, чи
+                                            не на кожній дільниці сосна,<br> береза або клен.</p>
                                         <p>Загальна площа будови: 290 м<sup>2</sup>
-                                        <p>Кількість спалень: 3</p>
-                                        <p>Гараж: 2 авто</p>
+                                            <p>Кількість спалень: 3</p>
+                                            <p>Гараж: 2 авто</p>
                                     </td>
                                 </tr>
                                 <tr style="border-top: 1px solid #e3e3eb; border-bottom: 1px solid #e3e3eb;">
                                     <td class="name-house" style="padding-left: 30px; padding-top: 10;">
-                                        <h3><a href="">EDMONTON (338 м<sup>2</sup>)</a></h3>
-                                        <p style="padding-bottom: 10px;">Тут є все для комфортної життя: вода з власної скважини, газова опалення, високошвидкісна Інтернет.</p>
-                                        <p>Загальна площа будови: 312  м<sup>2</sup>
-                                        <p>Кількість спалень: 4</p>
-                                        <p>Гараж: 2 авто</p>
+                                        <a href="https://likbez2014.github.io/hata_plus">
+                                            <h3>EDMONTON (338 м<sup>2</sup>)</h3>
+                                        </a>
+                                        <p style="padding-bottom: 10px;">Тут є все для комфортної життя: вода з власної
+                                            скважини, газова опалення, високошвидкісна Інтернет.</p>
+                                        <p>Загальна площа будови: 312 м<sup>2</sup>
+                                            <p>Кількість спалень: 4</p>
+                                            <p>Гараж: 2 авто</p>
                                     </td>
                                     <td class="view-house" style="padding-left:0;">
-                                       <img src="https://raw.githubusercontent.com/likbez2014/hata_newsletter/master/img/house_2.jpg" alt="house-edmonton"> 
+                                        <img src="https://raw.githubusercontent.com/likbez2014/hata_newsletter/master/img/house_2.jpg"
+                                            alt="house-edmonton">
                                     </td>
                                 </tr>
                                 <tr>
                                     <td class="view-house">
-                                       <img src="https://raw.githubusercontent.com/likbez2014/hata_newsletter/master/img/house_3.jpg" alt="house-calgary"> 
+                                        <img src="https://raw.githubusercontent.com/likbez2014/hata_newsletter/master/img/house_3.jpg"
+                                            alt="house-calgary">
                                     </td>
                                     <td class="name-house">
-                                        <h3><a href="">CALGARY (294 м<sup>2</sup>)</a></h3>
-                                        <p style="padding-bottom: 10px;">Для діток тут побудована ігровий та спортивний майданчик, а недалеко від містечка знаходяться дитячий садок.</p>
+                                        <a href="https://likbez2014.github.io/hata_plus">
+                                            <h3>CALGARY (294 м<sup>2</sup>)</h3>
+                                        </a>
+                                        <p style="padding-bottom: 10px;">Для діток тут побудована ігровий та спортивний
+                                            майданчик, а недалеко від містечка знаходяться дитячий садок.</p>
                                         <p>Загальна площа будови: 294 м<sup>2</sup>
-                                        <p>Кількість спалень: 3</p>
-                                        <p>Гараж: 2 авто</p>
-
+                                            <p>Кількість спалень: 3</p>
+                                            <p>Гараж: 2 авто</p>
                                     </td>
                                 </tr>
-                                <table border="0" cellpadding="0" cellspacing="0" align="center" width="100%" 
-                                style="border-collapse:collapse; background-image: url(https://raw.githubusercontent.com/likbez2014/hata_newsletter/master/img/container.jpg);">
-                                    <tr>
-                                        <td>
-                                           <h6>Отримай знижку -10%</h6>
-                                           <p>Відправ цього листа 10 друзям та отримай знижку на усі котеджі.
-                                            Акція триває в період з 21.04.2018 по 31.10.2018 включно.</p>
-                                           <a href="">
-                                               <img src="" alt="">
-                                            </a>
-                                        </td>
-                                    </tr>
-                                </table>
+                            </table>
+                            <table class="discount" border="0" cellpadding="0" cellspacing="0" align="center"
+                                width="100%" style="border-collapse:collapse;">
+                                <tr>
+                                    <td>
+                                        <a href="https://likbez2014.github.io/hata_plus">
+                                            <h6>Отримай знижку -10%</h6>
+                                        </a>
+                                        <p>Відправ цього листа 10 друзям та отримай знижку на усі котеджі.
+                                            <br>Акція триває в період з 21.04.2018 по 31.10.2018 включно.</p>
+                                        <a href="https://likbez2014.github.io/hata_plus">
+                                            <img src="https://raw.githubusercontent.com/likbez2014/hata_newsletter/master/img/button.png"
+                                                alt="button">
+                                        </a>
+                                    </td>
+                                </tr>
                             </table>
                         </td>
                     </tr>
@@ -143,7 +163,29 @@
         </tr>
         <tr>
             <td bgcolor="#dcdce5"></td>
-            <td></td>
+            <td>
+                <table class="footer">
+                    <tr>
+                        <td>
+                            <img src="https://raw.githubusercontent.com/likbez2014/hata_newsletter/master/img/tw%20(3).png"
+                                alt="">
+                        </td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                    </tr>
+                </table>
+            </td>
             <td bgcolor="#dcdce5"></td>
         </tr>
     </table>
