--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <tr>
             <td bgcolor="#dcdce5"></td>
             <td class="header">
-                <table border="0" cellpadding="0" cellspacing="0" align="center" width="100%"
+                <table border="0" cellpadding="0" cellspacing="0" align="center" width="600"
                     style="border-collapse:collapse;">
                     <tr>
                         <td class="logo">
@@ -40,7 +40,7 @@
         <tr>
             <td bgcolor="#f5f5f5"></td>
             <td>
-                <table border="0" cellpadding="0" cellspacing="0" align="center" width="100%"
+                <table border="0" cellpadding="0" cellspacing="0" align="center" width="600"
                     style="border-collapse:collapse;">
                     <tr>
                         <td>
@@ -164,7 +164,8 @@
         <tr>
             <td bgcolor="#dcdce5"></td>
             <td>
-                <table class="footer">
+                <table class="footer" border="0" cellpadding="0" cellspacing="0" align="center"
+                width="600" style="border-collapse:collapse;">
                     <tr>
                         <td>
                             <img src="https://raw.githubusercontent.com/likbez2014/hata_newsletter/master/img/tw%20(3).png"
